io-hotmoka-examples/src/main/java/io/hotmoka/tests/errors/illegalstaticinitialization2/C.java
package io.hotmoka.tests.errors.illegalstaticinitialization2;

public class C {
	public static String s = "hello"; // illegal without final
}